--- a/.do/app.yaml
+++ b/.do/app.yaml
@@ -1,9 +1,9 @@
-name: template-discord-bot-worker
+name: the-youthwork-bot
 workers:
 - name: worker
   environment_slug: python
   github:
-    repo: digitalocean/template-discord-bot-worker
+    repo: probablypotato/su
     branch: main
     deploy_on_push: true
   source_dir: /
