--- a/.do/deploy.template.yaml
+++ b/.do/deploy.template.yaml
@@ -6,7 +6,7 @@ spec:
     environment_slug: python
     git:
       branch: main
-      repo_clone_url: https://github.com/probablypotato/su.git
+      repo_clone_url: https://github.com/ProbablyPotato/su.git
     source_dir: /
     build_command: "pip install -r requirements.txt"
     run_command: "python discord_bot.py"
